--- a/Pikia.Library.Console/Pikia.Library.Console.csproj
+++ b/Pikia.Library.Console/Pikia.Library.Console.csproj
@@ -1,15 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="SkiaSharp" Version="2.88.0-preview.266" />
-    <PackageReference Include="System.Security.Cryptography.Csp" Version="4.3.0" />
+    <ProjectReference Include="..\Pikia.Library.Meta\Pikia.Library.Meta.csproj" />
   </ItemGroup>
 
 </Project>
